--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "cy:report": "cypress run"
   },
-  "author": "",
+  "author": "Bobby",
   "license": "ISC",
   "keywords": [],
   "description": "",
